--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/splash-screen": "~4.18.0",
-    "@ionic-native/sqlite": "^5.3.0",
+    "@ionic-native/sqlite": "^4.20.0",
     "@ionic-native/status-bar": "~4.18.0",
-    "@ionic-native/toast": "^5.3.0",
+    "@ionic-native/toast": "^4.20.0",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.4",
@@ -36,6 +36,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "2.7.2",
     "cordova-sqlite-storage": "3.2.0",
+    "emulate": "1.0.2",
     "ionic-angular": "3.9.3",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
